fix contact button safari issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,9 +108,3 @@ body {
     transform: rotate(1turn);
   }
 }
-
-.circle {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-}
